--- a/src/components/AddPostForm/AddPostForm.module.css
+++ b/src/components/AddPostForm/AddPostForm.module.css
@@ -1,7 +1,7 @@
-.addPost__form {
+.form {
 	padding: 40px 0;
 }
-.addPost__button {
+.button {
 	margin-top: 30px;
 	width: 100%;
 	padding: 10px;
@@ -12,16 +12,16 @@
 
 	font-weight: 700;
 }
-.addPost__button:disabled {
+.button:disabled {
 	opacity: 0.5;
 }
 
 @media (min-width: 1000px) {
-	.addPost__form {
+	.form {
 		padding: 50px 0;
 	}
 
-	.addPost__button {
+	.button {
 		display: block;
 		width: 200px;
 		margin-top: 55px;
