Добавляте разметку страниц, добавляет NavLink

--- a/src/components/MenuItem/MenuItem.module.css
+++ b/src/components/MenuItem/MenuItem.module.css
@@ -7,6 +7,10 @@
 	text-decoration: none;
 }
 
+.header__link__active {
+	text-decoration: none;
+}
+
 @media (min-width: 1000px) {
 	.header__item {
 		margin-left: 40px;
